--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=se_project
+spring.application.name=food-service
 
 # ?????
 spring.devtools.restart.enabled=true
@@ -30,5 +30,13 @@ spring.mail.default-encoding=utf-8
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-server.port=9090
+server.port=9094
 server.servlet.context-path=/api
+
+# eureka
+#spring.cloud.discovery.client.service-url.defaultZone: http://localhost:8761/eureka
+#spring.client.service-url.defaultZone: http://localhost:8761/
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+#eureka.instance.prefer-ip-address=true
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
