--- a/k8s/wwFood-deployment.yaml
+++ b/k8s/wwFood-deployment.yaml
@@ -3,10 +3,15 @@ kind: Deployment
 metadata:
   name: wwFood-deployment
 spec:
-  replicas: 1
+  replicas: 3
   selector:
     matchLabels:
       app: wwFood
+  strategy:
+    rollingUpdate: 
+      maxSurge: 50% 
+      maxUnavailable: 10%
+    type: RollingUpdate 
   template:
     metadata:
       labels:
