--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.devtools.restart.additional-paths=src/main/java
 spring.mvc.static-path-pattern=/images/**
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://bj-cynosdbmysql-grp-28gkdtyo.sql.tencentcdb.com:28882/Food
+spring.datasource.url=jdbc:mysql://food-service:3304/Food
 spring.datasource.username=root
 spring.datasource.password=werwerTrip1234
 
