--- a/k8s/wwFood-deployment.yaml
+++ b/k8s/wwFood-deployment.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
       - name: wwFood
-        image: qiuer0121/wwFood:latest
+        image: qiuer0121/wwfood:latest
         ports:
         - containerPort: 9094
 
