--- a/k8s/wwFood-hpa.yaml
+++ b/k8s/wwFood-hpa.yaml
@@ -1,14 +1,14 @@
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
-  name: wwFood-hpa
+  name: wwfood-hpa
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: wwFood-deployment
-  minReplicas: 3
-  maxReplicas: 15
+    name: wwfood-deployment
+  minReplicas: 1
+  maxReplicas: 5
   metrics:
   - type: Resource
     resource:
