--- a/k8s/wwFood-service.yaml
+++ b/k8s/wwFood-service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: wwFood-service
+  name: wwfood-service
 spec:
   selector:
-    app: wwFood
+    app: wwfood
   ports:
     - protocol: TCP
       port: 9094
