--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -53,18 +53,18 @@ resilience4j.circuitbreaker.configs.default.waitDurationInOpenState=60000
 resilience4j.circuitbreaker.configs.default.permittedNumberOfCallsInHalfOpenState=10
 resilience4j.circuitbreaker.configs.default.automaticTransitionFromOpenToHalfOpenEnabled=true
 
-# ? foodClient ???? CircuitBreaker
-resilience4j.circuitbreaker.instances.foodClient.baseConfig=default
-resilience4j.circuitbreaker.instances.foodClient.failureRateThreshold=50
-resilience4j.circuitbreaker.instances.foodClient.slidingWindowSize=20
+# ? trainClient ???? CircuitBreaker
+resilience4j.circuitbreaker.instances.trainClient.baseConfig=default
+resilience4j.circuitbreaker.instances.trainClient.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.trainClient.slidingWindowSize=20
 # Retry ??
-resilience4j.retry.instances.foodClient.maxAttempts=3
-resilience4j.retry.instances.foodClient.waitDuration=500
-resilience4j.retry.instances.foodClient.enableExponentialBackoff=true
-resilience4j.retry.instances.foodClient.exponentialBackoffMultiplier=2
+resilience4j.retry.instances.trainClient.maxAttempts=3
+resilience4j.retry.instances.trainClient.waitDuration=500
+resilience4j.retry.instances.trainClient.enableExponentialBackoff=true
+resilience4j.retry.instances.trainClient.exponentialBackoffMultiplier=2
 # RateLimiter ??
-resilience4j.ratelimiter.instances.foodClient.limitForPeriod=10
-resilience4j.ratelimiter.instances.foodClient.limitRefreshPeriod=1s
+resilience4j.ratelimiter.instances.trainClient.limitForPeriod=10
+resilience4j.ratelimiter.instances.trainClient.limitRefreshPeriod=1s
 
 # ? orderClient ???? CircuitBreaker
 resilience4j.circuitbreaker.instances.orderClient.baseConfig=default
