--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -37,7 +37,7 @@ server.servlet.context-path=/api/foods
 # eureka
 #spring.cloud.discovery.client.service-url.defaultZone: http://localhost:8761/eureka
 #spring.client.service-url.defaultZone: http://localhost:8761/
-eureka.client.serviceUrl.defaultZone=http://localhost:30011/
+eureka.client.serviceUrl.defaultZone=http://server-service:8761/eureka
 #eureka.instance.prefer-ip-address=true
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
