--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -32,7 +32,7 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 server.port=9094
-#server.servlet.context-path=/api/foods
+server.servlet.context-path=/api/foods
 
 # eureka
 #spring.cloud.discovery.client.service-url.defaultZone: http://localhost:8761/eureka
