--- a/k8s/wwFood-deployment.yaml
+++ b/k8s/wwFood-deployment.yaml
@@ -22,4 +22,9 @@ spec:
         image: bxr0820/wwfood:latest
         ports:
         - containerPort: 9094
+        resources:
+          requests:
+            cpu: "50m"  # 请求的 CPU 资源
+          limits:
+            cpu: "1000m"  # CPU 使用的最大限制
 
