--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,3 +40,64 @@ eureka.client.serviceUrl.defaultZone=http://eurekaserver-service:8761/eureka/
 #eureka.instance.prefer-ip-address=true
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
+# CircuitBreaker ??
+resilience4j.circuitbreaker.configs.default.registerHealthIndicator=true
+resilience4j.circuitbreaker.configs.default.slidingWindowSize=100
+resilience4j.circuitbreaker.configs.default.slidingWindowType=COUNT_BASED
+resilience4j.circuitbreaker.configs.default.minimumNumberOfCalls=10
+resilience4j.circuitbreaker.configs.default.failureRateThreshold=50
+resilience4j.circuitbreaker.configs.default.waitDurationInOpenState=60000
+resilience4j.circuitbreaker.configs.default.permittedNumberOfCallsInHalfOpenState=10
+resilience4j.circuitbreaker.configs.default.automaticTransitionFromOpenToHalfOpenEnabled=true
+
+# ? trainClient ???? CircuitBreaker
+resilience4j.circuitbreaker.instances.trainClient.baseConfig=default
+resilience4j.circuitbreaker.instances.trainClient.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.trainClient.slidingWindowSize=20
+# Retry ??
+resilience4j.retry.instances.trainClient.maxAttempts=3
+resilience4j.retry.instances.trainClient.waitDuration=500
+resilience4j.retry.instances.trainClient.enableExponentialBackoff=true
+resilience4j.retry.instances.trainClient.exponentialBackoffMultiplier=2
+# RateLimiter ??
+resilience4j.ratelimiter.instances.trainClient.limitForPeriod=10
+resilience4j.ratelimiter.instances.trainClient.limitRefreshPeriod=1s
+
+# ? orderClient ???? CircuitBreaker
+resilience4j.circuitbreaker.instances.orderClient.baseConfig=default
+resilience4j.circuitbreaker.instances.orderClient.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.orderClient.slidingWindowSize=20
+# Retry ??
+resilience4j.retry.instances.orderClient.maxAttempts=3
+resilience4j.retry.instances.orderClient.waitDuration=500
+resilience4j.retry.instances.orderClient.enableExponentialBackoff=true
+resilience4j.retry.instances.orderClient.exponentialBackoffMultiplier=2
+# RateLimiter ??
+resilience4j.ratelimiter.instances.orderClient.limitForPeriod=10
+resilience4j.ratelimiter.instances.orderClient.limitRefreshPeriod=1s
+
+# ? userClient ???? CircuitBreaker
+resilience4j.circuitbreaker.instances.userClient.baseConfig=default
+resilience4j.circuitbreaker.instances.userClient.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.userClient.slidingWindowSize=20
+# Retry ??
+resilience4j.retry.instances.userClient.maxAttempts=3
+resilience4j.retry.instances.userClient.waitDuration=500
+resilience4j.retry.instances.userClient.enableExponentialBackoff=true
+resilience4j.retry.instances.userClient.exponentialBackoffMultiplier=2
+# RateLimiter ??
+resilience4j.ratelimiter.instances.userClient.limitForPeriod=10
+resilience4j.ratelimiter.instances.userClient.limitRefreshPeriod=1s
+
+# ? messageClient ???? CircuitBreaker
+resilience4j.circuitbreaker.instances.messageClient.baseConfig=default
+resilience4j.circuitbreaker.instances.messageClient.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.messageClient.slidingWindowSize=20
+# Retry ??
+resilience4j.retry.instances.messageClient.maxAttempts=3
+resilience4j.retry.instances.messageClient.waitDuration=500
+resilience4j.retry.instances.messageClient.enableExponentialBackoff=true
+resilience4j.retry.instances.messageClient.exponentialBackoffMultiplier=2
+# RateLimiter ??
+resilience4j.ratelimiter.instances.messageClient.limitForPeriod=10
+resilience4j.ratelimiter.instances.messageClient.limitRefreshPeriod=1s
