--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -43,6 +43,9 @@ eureka.client.fetch-registry=true
 eureka.instance.prefer-ip-address=true
 eureka.instance.ip-address=127.0.0.1
 
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+
 # CircuitBreaker ??
 resilience4j.circuitbreaker.configs.default.registerHealthIndicator=true
 resilience4j.circuitbreaker.configs.default.slidingWindowSize=100
@@ -52,55 +55,49 @@ resilience4j.circuitbreaker.configs.default.failureRateThreshold=50
 resilience4j.circuitbreaker.configs.default.waitDurationInOpenState=60000
 resilience4j.circuitbreaker.configs.default.permittedNumberOfCallsInHalfOpenState=10
 resilience4j.circuitbreaker.configs.default.automaticTransitionFromOpenToHalfOpenEnabled=true
+#resilience4j.circuitbreaker.configs.default.recordExceptions[0]=feign.FeignException.FeignClientException
+#resilience4j.circuitbreaker.configs.default.recordExceptions[1]=org.springframework.web.client.HttpServerErrorException
+#resilience4j.circuitbreaker.configs.default.recordExceptions[2]=org.springframework.web.client.HttpClientErrorException
+#resilience4j.circuitbreaker.configs.default.recordExceptions[3]=org.springframework.web.server.ResponseStatusException
+#resilience4j.circuitbreaker.configs.default.recordExceptions[4]=java.lang.Exception
 
-# ? trainClient ???? CircuitBreaker
-resilience4j.circuitbreaker.instances.trainClient.baseConfig=default
-resilience4j.circuitbreaker.instances.trainClient.failureRateThreshold=50
-resilience4j.circuitbreaker.instances.trainClient.slidingWindowSize=20
-# Retry ??
-resilience4j.retry.instances.trainClient.maxAttempts=3
-resilience4j.retry.instances.trainClient.waitDuration=500
-resilience4j.retry.instances.trainClient.enableExponentialBackoff=true
-resilience4j.retry.instances.trainClient.exponentialBackoffMultiplier=2
-# RateLimiter ??
-resilience4j.ratelimiter.instances.trainClient.limitForPeriod=10
-resilience4j.ratelimiter.instances.trainClient.limitRefreshPeriod=1s
+spring.cloud.openfeign.circuitbreaker.enabled=true
 
-# ? orderClient ???? CircuitBreaker
-resilience4j.circuitbreaker.instances.orderClient.baseConfig=default
-resilience4j.circuitbreaker.instances.orderClient.failureRateThreshold=50
-resilience4j.circuitbreaker.instances.orderClient.slidingWindowSize=20
-# Retry ??
-resilience4j.retry.instances.orderClient.maxAttempts=3
-resilience4j.retry.instances.orderClient.waitDuration=500
-resilience4j.retry.instances.orderClient.enableExponentialBackoff=true
-resilience4j.retry.instances.orderClient.exponentialBackoffMultiplier=2
-# RateLimiter ??
-resilience4j.ratelimiter.instances.orderClient.limitForPeriod=10
-resilience4j.ratelimiter.instances.orderClient.limitRefreshPeriod=1s
 
-# ? userClient ???? CircuitBreaker
-resilience4j.circuitbreaker.instances.userClient.baseConfig=default
-resilience4j.circuitbreaker.instances.userClient.failureRateThreshold=50
-resilience4j.circuitbreaker.instances.userClient.slidingWindowSize=20
-# Retry ??
-resilience4j.retry.instances.userClient.maxAttempts=3
-resilience4j.retry.instances.userClient.waitDuration=500
-resilience4j.retry.instances.userClient.enableExponentialBackoff=true
-resilience4j.retry.instances.userClient.exponentialBackoffMultiplier=2
-# RateLimiter ??
-resilience4j.ratelimiter.instances.userClient.limitForPeriod=10
-resilience4j.ratelimiter.instances.userClient.limitRefreshPeriod=1s
+resilience4j.circuitbreaker.instances.food-service.baseConfig=default
+resilience4j.circuitbreaker.instances.food-service.failureRateThreshold=10
+resilience4j.circuitbreaker.instances.food-service.slidingWindowSize=20
 
-# ? messageClient ???? CircuitBreaker
-resilience4j.circuitbreaker.instances.messageClient.baseConfig=default
-resilience4j.circuitbreaker.instances.messageClient.failureRateThreshold=50
-resilience4j.circuitbreaker.instances.messageClient.slidingWindowSize=20
-# Retry ??
-resilience4j.retry.instances.messageClient.maxAttempts=3
-resilience4j.retry.instances.messageClient.waitDuration=500
-resilience4j.retry.instances.messageClient.enableExponentialBackoff=true
-resilience4j.retry.instances.messageClient.exponentialBackoffMultiplier=2
-# RateLimiter ??
-resilience4j.ratelimiter.instances.messageClient.limitForPeriod=10
-resilience4j.ratelimiter.instances.messageClient.limitRefreshPeriod=1s
+resilience4j.circuitbreaker.instances.getRelate.baseConfig=default
+resilience4j.circuitbreaker.instances.getRelate.failureRateThreshold=10
+resilience4j.circuitbreaker.instances.getRelate.slidingWindowSize=20
+
+## ? trainClient ???? CircuitBreaker
+#resilience4j.circuitbreaker.instances.train-service.baseConfig=default
+#resilience4j.circuitbreaker.instances.train-service.failureRateThreshold=10
+#resilience4j.circuitbreaker.instances.train-service.slidingWindowSize=20
+#
+#
+## ? orderClient ???? CircuitBreaker
+#resilience4j.circuitbreaker.instances.order-service.baseConfig=default
+#resilience4j.circuitbreaker.instances.order-service.failureRateThreshold=10
+#resilience4j.circuitbreaker.instances.order-service.slidingWindowSize=20
+#
+#
+## ? userClient ???? CircuitBreaker
+#resilience4j.circuitbreaker.instances.user-service.baseConfig=default
+#resilience4j.circuitbreaker.instances.user-service.failureRateThreshold=10
+#resilience4j.circuitbreaker.instances.user-service.slidingWindowSize=20
+
+
+## ? messageClient ???? CircuitBreaker
+#resilience4j.circuitbreaker.instances.messageClient.baseConfig=default
+#resilience4j.circuitbreaker.instances.messageClient.failureRateThreshold=10
+#resilience4j.circuitbreaker.instances.messageClient.slidingWindowSize=20
+
+logging.level.io.github.resilience4j=DEBUG
+logging.level.io.github.resilience4j.circuitbreaker=DEBUG
+logging.level.io.github.resilience4j.retry=DEBUG
+logging.level.io.github.resilience4j.ratelimiter=DEBUG
+logging.level.io.github.resilience4j.bulkhead=DEBUG
+logging.level.io.github.resilience4j.timelimiter=DEBUG
