--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -12,7 +12,6 @@ spring.datasource.url=jdbc:mysql://food-service:3307/Food
 spring.datasource.username=root
 spring.datasource.password=werwerTrip1234
 
-
 mybatis.mapper-locations= classpath:mapper/*.xml
 mybatis.type-aliases-package= com.buaa.werwerfood.entity
 
@@ -41,3 +40,65 @@ eureka.client.serviceUrl.defaultZone=http://server-service:8761/eureka
 #eureka.instance.prefer-ip-address=true
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
+
+eureka.instance.prefer-ip-address=true
+
+
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+
+# CircuitBreaker ??
+resilience4j.circuitbreaker.configs.default.registerHealthIndicator=true
+resilience4j.circuitbreaker.configs.default.slidingWindowSize=100
+resilience4j.circuitbreaker.configs.default.slidingWindowType=COUNT_BASED
+resilience4j.circuitbreaker.configs.default.minimumNumberOfCalls=10
+resilience4j.circuitbreaker.configs.default.failureRateThreshold=50
+resilience4j.circuitbreaker.configs.default.waitDurationInOpenState=60000
+resilience4j.circuitbreaker.configs.default.permittedNumberOfCallsInHalfOpenState=10
+resilience4j.circuitbreaker.configs.default.automaticTransitionFromOpenToHalfOpenEnabled=true
+#resilience4j.circuitbreaker.configs.default.recordExceptions[0]=feign.FeignException.FeignClientException
+#resilience4j.circuitbreaker.configs.default.recordExceptions[1]=org.springframework.web.client.HttpServerErrorException
+#resilience4j.circuitbreaker.configs.default.recordExceptions[2]=org.springframework.web.client.HttpClientErrorException
+#resilience4j.circuitbreaker.configs.default.recordExceptions[3]=org.springframework.web.server.ResponseStatusException
+#resilience4j.circuitbreaker.configs.default.recordExceptions[4]=java.lang.Exception
+
+spring.cloud.openfeign.circuitbreaker.enabled=true
+
+
+resilience4j.circuitbreaker.instances.food-service.baseConfig=default
+resilience4j.circuitbreaker.instances.food-service.failureRateThreshold=10
+resilience4j.circuitbreaker.instances.food-service.slidingWindowSize=20
+
+resilience4j.circuitbreaker.instances.getRelate.baseConfig=default
+resilience4j.circuitbreaker.instances.getRelate.failureRateThreshold=10
+resilience4j.circuitbreaker.instances.getRelate.slidingWindowSize=20
+
+## ? trainClient ???? CircuitBreaker
+#resilience4j.circuitbreaker.instances.train-service.baseConfig=default
+#resilience4j.circuitbreaker.instances.train-service.failureRateThreshold=10
+#resilience4j.circuitbreaker.instances.train-service.slidingWindowSize=20
+#
+#
+## ? orderClient ???? CircuitBreaker
+#resilience4j.circuitbreaker.instances.order-service.baseConfig=default
+#resilience4j.circuitbreaker.instances.order-service.failureRateThreshold=10
+#resilience4j.circuitbreaker.instances.order-service.slidingWindowSize=20
+#
+#
+## ? userClient ???? CircuitBreaker
+#resilience4j.circuitbreaker.instances.user-service.baseConfig=default
+#resilience4j.circuitbreaker.instances.user-service.failureRateThreshold=10
+#resilience4j.circuitbreaker.instances.user-service.slidingWindowSize=20
+
+
+## ? messageClient ???? CircuitBreaker
+#resilience4j.circuitbreaker.instances.messageClient.baseConfig=default
+#resilience4j.circuitbreaker.instances.messageClient.failureRateThreshold=10
+#resilience4j.circuitbreaker.instances.messageClient.slidingWindowSize=20
+
+logging.level.io.github.resilience4j=DEBUG
+logging.level.io.github.resilience4j.circuitbreaker=DEBUG
+logging.level.io.github.resilience4j.retry=DEBUG
+logging.level.io.github.resilience4j.ratelimiter=DEBUG
+logging.level.io.github.resilience4j.bulkhead=DEBUG
+logging.level.io.github.resilience4j.timelimiter=DEBUG
